# Laboratory-works

./: CMakeLists.txt
Lab1/Task7/: task7_main.c
Lab2/: CMakeLists.txt
Lab2/Task1/Include/: func.h
Lab2/Task1/src_exe/: CMakeLists.txt  main.c
Lab2/Task1/src_lib_1/: CMakeLists.txt  function1.c
Lab2/Task1/src_lib_2/: CMakeLists.txt  function2.c
Lab3/: CMakeLists.txt
Lab3/Task1/: CMakeLists.txt
Lab3/Task1/Include/: function.h
Lab3/Task1/src_exe/: CMakeLists.txt  main.c
Lab3/Task1/src_lib_1/: CMakeLists.txt  func.c
Lab3/Task1/src_lib_2/: CMakeLists.txt  func.c
Lab3/Task1/src_lib_3/: CMakeLists.txt  func.c
Lab4/: CMakeLists.txt
Lab4/Task1/: CMakeLists.txt  task1.c
Lab4/Task2/: CMakeLists.txt  task2.c
Lab4/Task3/: CMakeLists.txt  task3.c
Lab4/Task4/: CMakeLists.txt  task4.c
Lab4/Task5/: CMakeLists.txt  task5.c
Lab4/Task6/: CMakeLists.txt  task6.c
Lab5/: CMakeLists.txt  Functions.h  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Lab6/: Lab6.c
