# CMakeList.txt : CMake project for Lab3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_subdirectory("src_lib_1")
add_subdirectory("src_lib_2")
add_subdirectory("src_lib_3")
add_subdirectory("src_exe")


# TODO: Add tests and install targets if needed.
